[ADD] submodule OCA/account-analytic

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = a_DinamicheAziendali/da_tools
 	url = git@github.com:DinamicheAziendali/da_tools.git
 	branch = 14.0
+
+[submodule "OCA/account-analytic"]
+	path = OCA/account-analytic
+	url = git@github.com:OCA/account-analytic.git
+	branch = 14.0
