--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,8 @@
 	path = b_OCA/account-financial-tools
 	url = git@github.com:OCA/account-financial-tools.git
 	branch = 14.0
+
+[submodule "b_OCA/account-invoicing"]
+	path = b_OCA/account-invoicing
+	url = git@github.com:OCA/account-invoicing.git
+	branch = 14.0
