--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,8 @@
 	path = b_OCA/delivery-carrier
 	url = git@github.com:OCA/delivery-carrier.git
 	branch = 14.0
+
+[submodule "b_OCA/partner-contact"]
+	path = b_OCA/partner-contact
+	url = git@github.com:OCA/partner-contact.git
+	branch = 14.0
