--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,8 @@
 	path = b_OCA/server-tools
 	url = git@github.com:OCA/server-tools.git
 	branch = 14.0
+
+[submodule "b_OCA/server-ux"]
+	path = b_OCA/server-ux
+	url = git@github.com:OCA/server-ux.git
+	branch = 14.0
