--- a/.gitmodules
+++ b/.gitmodules
@@ -72,3 +72,8 @@
 	path = b_OCA/server-ux
 	url = git@github.com:OCA/server-ux.git
 	branch = 14.0
+
+[submodule "b_OCA/stock-logistics-warehouse"]
+	path = b_OCA/stock-logistics-warehouse
+	url = git@github.com:OCA/stock-logistics-warehouse.git
+	branch = 14.0
