--- a/.gitmodules
+++ b/.gitmodules
@@ -77,3 +77,8 @@
 	path = b_OCA/stock-logistics-warehouse
 	url = git@github.com:OCA/stock-logistics-warehouse.git
 	branch = 14.0
+
+[submodule "b_OCA/stock-logistics-workflow"]
+	path = b_OCA/stock-logistics-workflow
+	url = git@github.com:OCA/stock-logistics-workflow.git
+	branch = 14.0
