--- a/.gitmodules
+++ b/.gitmodules
@@ -107,3 +107,8 @@
 	path = a_DinamicheAziendali/da-a-pr
 	url = git@github.com:DinamicheAziendali/da-a-pr.git
 	branch = 14.0
+
+[submodule "a_DinamicheAziendali/da-submodules"]
+	path = a_DinamicheAziendali/da-submodules
+	url = git@github.com:DinamicheAziendali/da-submodules.git
+	branch = 14.0
