--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	path = a_DinamicheAziendali/da-submodules
 	url = git@github.com:DinamicheAziendali/da-submodules.git
 	branch = 16.0
+
+[submodule "a_DinamicheAziendali/da-a-atestpr"]
+	path = a_DinamicheAziendali/da-a-atestpr
+	url = git@github.com:DinamicheAziendali/da-a-atestpr.git
+	branch = 16.0-migration_from_14
