--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,7 @@
 	path = a_DinamicheAziendali/da-a-atestpr
 	url = https://github.com/DinamicheAziendali/da-a-atestpr.git
 	branch = 16.0-migration_from_14
+[submodule "a_DinamicheAziendali/oca-only-field-for-missing-module"]
+	path = a_DinamicheAziendali/oca-only-field-for-missing-module
+	url = https://github.com/DinamicheAziendali/oca-only-field-for-missing-module.git
+	branch = 16.0
